--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   flutter_fortune_wheel: ^0.4.2
   flutter_svg: ^0.22.0
-  numberpicker: ^2.1.1
+  flutter_picker: ^2.0.1
 
 dev_dependencies:
   flutter_test:
