--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_fortune_wheel: ^0.4.2
   flutter_svg: ^0.22.0
   flutter_picker: ^2.0.1
+  google_fonts: ^2.1.0
 
 dev_dependencies:
   flutter_test:
