--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_svg: ^0.22.0
   flutter_picker: ^2.0.1
   google_fonts: ^2.1.0
+  path_provider: ^2.0.1
 
 dev_dependencies:
   flutter_test:
