--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,11 @@ dependencies:
   flutter_picker: ^2.0.1
   google_fonts: ^2.1.0
   path_provider: ^2.0.1
+  json_serializable: ^4.1.3
+  json_annotation: ^4.0.1
 
 dev_dependencies:
+  build_runner: ^2.0.4
   flutter_test:
     sdk: flutter
 
